HomeWorks/14/14.5/config/first-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: first-app-policy
  namespace: network-policy-test
spec:
  podSelector:
    matchLabels:
      app: first-app
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: second-app
  egress:
  - {}
  policyTypes:
  - Ingress
  - Egress
