HomeWorks/14/14.5/config/second-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: second-policy
  namespace: network-policy-test
spec:
  podSelector:
    matchLabels:
      app: second-app
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: first-app
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: first-app
  policyTypes:
  - Ingress
  - Egress
